<resources>
    <string name="app_name">COVID-19 App</string>

    <!-- General -->
    <string name="confirmed">Confirmed</string>
    <string name="new_confirmed">New Confirmed</string>
    <string name="recovered">Recovered</string>
    <string name="new_recovered">New Recovered</string>
    <string name="deaths">Deaths</string>
    <string name="new_deaths">New Deaths</string>
    <string name="dash">-</string>

    <!-- Bottom Navigation Bar -->
    <string name="title_world">Worldwide</string>
    <string name="title_country">Country</string>

    <!-- Select Country -->
    <string name="select_country">Select Country</string>
    <string name="select">Select</string>
    <string name="cancel">Cancel</string>
</resources>
